tests/ui/unique_field_syntax.stderr
error: unique field syntax is `unique = "field"`
  --> tests/ui/unique_field_syntax.rs:10:16
   |
10 |     #[validate(unique(field = "email"))]
   |                ^^^^^^
